# cambridge-l65

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  download_data.py  embed_dataset.py  pyproject.toml
report/: figures.ipynb
src/: ablations.py  asr_types.py  config.py  dataset.py  eval.py  extension_ideas.py  inference.py  merge_seed_evals.py  metrics.py  train.py
src/ablation_configs/: gnn.py  pe.py
src/embeddings/: config.py  dataset.py
src/models/: asr.py
src/models/modules/: anchor.py  gnn.py  scorer.py
src/models/modules/pe/: anchor.py  path.py  topic.py
src/models/text_encoders/: README.md  __init__.py  gte_large_en.py
