[project]
name = "v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "huggingface-hub>=1.4.1",
    "ipykernel>=7.2.0",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pre-commit>=4.5.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pyright>=1.1.408",
    "ruff>=0.15.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "transformers>=5.2.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-redis>=4.6.0.20241004",
    "types-tabulate>=0.9.0.20241207",
    "wandb>=0.25.0",
]

[tool.mypy]
explicit_package_bases = true

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.2",
]
